--- a/automation.html
+++ b/automation.html
@@ -14,6 +14,7 @@
   
   <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
   <link href="./assets/favicon.ico" rel="icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 
   <title>Accurata X3</title>  
 
@@ -44,11 +45,6 @@
           <!-- <li><a href="./engineering.html" title="">Engineering</a></li> -->
           <li><a href="./integration.html" title="">Integration</a></li>
           <li><a href="./contact.html" title="">Contact</a></li>
-          <!-- <li><a href="./components.html" title="">Components</a></li> -->
-          <!-- <li>
-            <p><a href="./download.html" class="btn btn-primary navbar-btn" title="">Download</a></p>
-          </li> -->
-          
         </ul>
       </div>
     </div>
@@ -56,12 +52,9 @@
 </header>
 
 
-
-
-<div class="">
+<div class=" animate__animated animate__backInDown">
     <div class="container">
         <div class="row">
-
             <div class="col-xs-12">
                <img class="img-responsive" src="./assets/images/automate.jpg">
             </div>
@@ -108,7 +101,7 @@
             </div>
 
 
-            <div class="section-container">
+            <div class="section-container animate__animated animate__backInDown">
               <div class="container">
                   <div class="row">                   
                       <div class="col-md-7">
@@ -167,7 +160,7 @@
   <div class="section-container footer-container">
       <div class="container">
           <div class="row">
-                  <div class="col-md-4">
+                  <!-- <div class="col-md-4">
                       <h4>About us</h4>
                       <p>Accurata x3 is the unique Nigerian Endorsed SI. Furthermore we are trying to become , a member of several international associations aimed to develop the system integration field and enhance operations performance including: CSIA (Control System Integrator Association), MESA (Manufacturing Enterprise Solutions Association) and Automation Alliance Group.</p>
                   </div>
@@ -193,9 +186,9 @@
                         Accurata
                       </p>
                       <!-- <p><small>© Untitled | Website created with <a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup Template</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a></small></p>     -->
-                  </div>
+                  <!-- </div> -->
 
-                  <div class="col-md-4">
+                  <div class="col-md-12 text-center">
                       <h4>Contact Address:</h4>
                       <p>Block 86 Plot 24
                           Chief Collins Uchidiuno Street, Lekki Phase 1, Eti-osa, Lagos
