--- a/integration.html
+++ b/integration.html
@@ -14,10 +14,9 @@
   
   <link href="./assets/apple-touch-icon.png" rel="apple-touch-icon">
   <link href="./assets/favicon.ico" rel="icon">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> 
 
- 
-
-  <title>Title page</title>  
+  <title>Accurata X3</title>   
 
 <link href="./main.a3f694c0.css" rel="stylesheet"></head>
 
@@ -25,7 +24,7 @@
 
  <!-- Add your content of header -->
 <header>
-  <nav class="navbar  navbar-fixed-top navbar-default">
+  <nav class="navbar navbar-fixed-top navbar-default">
     <div class="container">
       <div class="navbar-header">
         <button type="button" class="navbar-toggle uarr collapsed" data-toggle="collapse" data-target="#navbar-collapse-uarr">
@@ -45,21 +44,26 @@
           <li><a href="./automation.html" title=""> Automation</a></li>
           <!-- <li><a href="./engineering.html" title="">Engineering</a></li> -->
           <li><a href="./integration.html" title="">Integration</a></li>
-          <li><a href="./contact.html" title="">Contact</a></li>
-          <!-- <li><a href="./components.html" title="">Components</a></li> -->
-          <!-- <li>
-            <p>
-              <a href="./download.html" class="btn btn-primary navbar-btn" title="">Download</a>
-            </p>
-          </li> -->
-          
+          <li><a href="./contact.html" title="">Contact</a></li>          
         </ul>
       </div>
     </div>
   </nav>
 </header>
 
-<div class="section-container">
+
+<div class="animate__animated animate__backInDown">
+  <div class="container">
+      <div class="row">
+          <div class="col-xs-12">
+             <img class="img-responsive" src="./assets/images/Integration_web.jpeg">
+          </div>
+      </div>
+  </div>
+</div>
+
+
+<div class="section-container animate__animated animate__backInDown">
   <div class="container">
       <div class="row">
         <!-- <div class="col-xs-12"> -->
@@ -169,12 +173,8 @@
             <div class="row ">
               <div class="col-md-12">
                   <ul class="features">
-                    <li>Enable 500+ plants employees to share knowledge of equipment and work processes </li>
-                    <li>To get frontline workers up to speed on the essential skills</li>
-                    <!-- <li>Capture best practices and collaborate </li>
-                    <li>Improve production reliability for high-value baked goods</li> -->
-                    <!-- <li>Provide consistency of product quality related to variability</li>
-                    <li>Ensure food safety, while delivering to schedule and at cost</li> -->
+                    <li>Improving packaging performance and meeting customer demands</li>
+                    <li>Introduction of digital factory drives operational excellence and sustainabilityAdoption and introduction of advanced process control</li>
                 </ul>
               </div>
             </div>
@@ -252,9 +252,9 @@
                 <div class="row ">
                   <div class="col-md-12">
                       <ul class="features">
-                        <li>Optimize operators’ efficiency and reliability during inspection activity</li>
-                        <li>Information silos made it difficult to find trusted asset information in a timely manner which hampered decision making</li>
-                        <li>Deep knowledge in designing, building and operating facilities</li>
+                        <li>Ability to effectively plan and schedule maintenance and outages around customer demand</li>
+                        <li>Early warning detection and diagnosis  of equipment problems</li>
+                        <li>Predictive monitoring of critical assets (compressors, pumps, expanders, turbines, etc.)</li>
                     </ul>
                   </div>
                 </div>
@@ -271,8 +271,8 @@
                 <div class="row ">
                   <div class="col-md-12">
                       <ul class="features">
-                        <li>Inefficient project execution and a desire to improve and modernize via digital transformation</li>
-                        <li>Leading in AWP implementation meant learning alongside project contractors and high dependency on internal and consulting AWP experts</li>
+                        <li>Laying the foundation for digital approach to project execution</li>
+                        <li>Unlocking creativity, expertise & value creation for customers</li>
                     </ul>
                   </div>
                 </div>
@@ -290,9 +290,8 @@
             <div class="row ">
               <div class="col-md-12">
                   <ul class="features">
-                    <li>More effectively manage the city’s water consumption for both irrigation and public use</li>
-                    <li>Automated data capture and reporting leveraging IIoT devices and cloud</li>
                     <li>Quality of life, smart growth and city resilience</li>
+                    <li>Centralized control of the city’s international gateway</li>
                 </ul>
               </div>
             </div>
@@ -309,9 +308,10 @@
           <div class="row ">
             <div class="col-md-12">
                 <ul class="features">
-                  <li>Boost plant and energy efficiency by introducing IIoT technologies that reduce downtime  </li>
-                  <li>Unlocking data silos and mobilize staff with increased plant-wide visualization</li>
-                  <li>Reduce process variability, create standardization to improve efficiency</li>
+                  <li>Improving stability and quality</li>
+                  <li>Implemented Advanced Planning and Scheduling (APS) Solution across plants</li>
+                  <li>Accelerating time to market</li>
+                  <li>Transform manufacturing operations, safeguarding quality & safety</li>
               </ul>
             </div>
           </div>
@@ -338,10 +338,10 @@
                 <div class="row ">
                   <div class="col-md-12">
                       <ul class="features">
-                        <li>Need for fast and detailed digital visualizations of physical assets</li>
+                        <li>Fast and detailed digital visualizations of physical assets</li>
                         <li>Streamline vessel design</li>
                         <li>Minimize rework</li>
-                        <li>Large amounts of data demand accuracy</li>
+                        <li>Driving business growth with AVEVA Everything3D & Laser Scanning</li>
                     </ul>
                   </div>
                 </div>
@@ -358,9 +358,9 @@
                 <div class="row ">
                   <div class="col-md-12">
                       <ul class="features">
-                        <li>Three separate mine locations with complicated cross-site collaboration</li>
-                        <li>To ensure high health and safety standards were maintained</li>
-                        <li>To streamline capex and drive optimizations throughout the mining value chain</li>
+                        <li>Complete operations and optimize the entire value chain</li>
+                        <li>Standardizing asset utilization across mines sites globally</li>
+                        <li>Maximizing production and scalability of workforce</li>
                     </ul>
                   </div>
                 </div>
@@ -379,8 +379,7 @@
               <div class="col-md-12">
                   <ul class="features">
                     <li>Reduce process variability, create standardization to improve efficiency</li>
-                    <li>Unify data and analytics to enable a complete view of the medicines manufacturing process</li>
-                    <li>Use information and predictive analytics to pro-actively manage operational maintenance</li>
+                    <li>	Transform manufacturing operations, safeguarding quality & safety</li>
                 </ul>
               </div>
             </div>
@@ -397,8 +396,10 @@
           <div class="row ">
             <div class="col-md-12">
                 <ul class="features">
-                  <li>Reduce overall operations, maintenance and capital spending, while maintaining high availability within plants and continuously and efficiently serving customers</li>
-                  <li>Achieve Operations excellence to empower grid operators to make faster, closed-loop decisions, provide better power quality and minimal outages while maximizing the ROI on assets.</li>
+                  <li>Enabling one of power plants to stay up and running more profitably</li>
+                  <li>Leveraging IIoT and predictive analytics to reduce failures</li>
+                  <li>Achieving uninterrupted service with predictive analytics</li>
+                  <li>Achieving uninterrupted service with predictive analytics</li>
               </ul>
             </div>
           </div>
@@ -417,7 +418,7 @@
   <div class="section-container footer-container">
       <div class="container">
           <div class="row">
-                  <div class="col-md-4">
+                  <!-- <div class="col-md-4">
                       <h4>About us</h4>
                       <p>Accurata x3 is the unique Nigerian Endorsed SI. Furthermore we are trying to become , a member of several international associations aimed to develop the system integration field and enhance operations performance including: CSIA (Control System Integrator Association), MESA (Manufacturing Enterprise Solutions Association) and Automation Alliance Group.</p>
                   </div>
@@ -443,9 +444,9 @@
                         Accurata
                       </p>
                       <!-- <p><small>© Untitled | Website created with <a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup Template</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a></small></p>     -->
-                  </div>
+                  <!-- </div> -->
 
-                  <div class="col-md-4">
+                  <div class="col-md-12 text-center">
                       <h4>Contact Address:</h4>
                       <p>Block 86 Plot 24
                           Chief Collins Uchidiuno Street, Lekki Phase 1, Eti-osa, Lagos
