--- a/integration.html
+++ b/integration.html
@@ -105,8 +105,8 @@
                           <li>Autonomous Vehicles</li>
                           <li>Cyber Security & Big Data</li>
                           <li>Digital Disruption & Transformation</li>
-                          <!-- <li>Intelligent Automation</li>
-                          <li>Machine Learning</li>
+                          <li>Process Automation</li>
+                          <!-- <li>Machine Learning</li>
                           <li>Robotic Process Automation</li> -->
                       </ul>
                     </div>
@@ -174,7 +174,7 @@
               <div class="col-md-12">
                   <ul class="features">
                     <li>Improving packaging performance and meeting customer demands</li>
-                    <li>Introduction of digital factory drives operational excellence and sustainabilityAdoption and introduction of advanced process control</li>
+                    <li>Introduction of digital factory drives operational excellence and sustainability Adoption and introduction of advanced process control</li>
                 </ul>
               </div>
             </div>
@@ -396,7 +396,7 @@
           <div class="row ">
             <div class="col-md-12">
                 <ul class="features">
-                  <li>Enabling one of power plants to stay up and running more profitably</li>
+                  <li>Enabling Power plants to stay up and running more profitably</li>
                   <li>Leveraging IIoT and predictive analytics to reduce failures</li>
                   <li>Achieving uninterrupted service with predictive analytics</li>
                   <li>Achieving uninterrupted service with predictive analytics</li>
