--- a/automation.html
+++ b/automation.html
@@ -96,7 +96,7 @@
                 <div class="col-xs-12 col-md-8 col-md-offset-2">
                   <div><br /></div>
                   <p>Accurata x3 is a Nigerian System Integrator that develops high quality software deployment for manufacturing execution management, process control and supply chain. “Manufacturing made Smart” is Accurata x3’s watch word. Founded in Lagos in 2001, Accurata x3 one of the first Nigerian System Integrators offering MES solutions to manage operations. Accurata x3 supported MES/MOM projects in manufacturing facilities of every dimension and industry, in Nigeria and West africa. Accurata x3’s ability, in offering tailor made solutions based on standard, is one of its key success factors, together with the use of standard platforms, highly scalable and customizable.</p>
-                  <small class="signature pull-right">Accurata</small>
+                  <!-- <small class="signature pull-right">Accurata</small> -->
                 </div>
             </div>
 
@@ -188,7 +188,7 @@
                       <!-- <p><small>© Untitled | Website created with <a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup Template</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a></small></p>     -->
                   <!-- </div> -->
 
-                  <div class="col-md-12 text-center">
+                  <div class="col-md-12 text-center cus-pad">
                       <h4>Contact Address:</h4>
                       <p>Block 86 Plot 24
                           Chief Collins Uchidiuno Street, Lekki Phase 1, Eti-osa, Lagos
