--- a/integration.html
+++ b/integration.html
@@ -379,7 +379,7 @@
               <div class="col-md-12">
                   <ul class="features">
                     <li>Reduce process variability, create standardization to improve efficiency</li>
-                    <li>	Transform manufacturing operations, safeguarding quality & safety</li>
+                    <li>Transform manufacturing operations, safeguarding quality & safety</li>
                 </ul>
               </div>
             </div>
@@ -446,7 +446,7 @@
                       <!-- <p><small>© Untitled | Website created with <a href="http://www.mashup-template.com/" class="link-like-text" title="Create website with free html template">Mashup Template</a>/<a href="http://www.unsplash.com/" class="link-like-text" title="Beautiful Free Images">Unsplash</a></small></p>     -->
                   <!-- </div> -->
 
-                  <div class="col-md-12 text-center">
+                  <div class="col-md-12 text-center cus-pad">
                       <h4>Contact Address:</h4>
                       <p>Block 86 Plot 24
                           Chief Collins Uchidiuno Street, Lekki Phase 1, Eti-osa, Lagos
