--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
               <a href="https://twitter.com/" class="social-round-icon white-round-icon fa-icon" title="">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </a>
-              Accurata_x3
+              AccurataX3
             </p>
             <p>
               <a href="https://www.linkedin.com/" class="social-round-icon white-round-icon fa-icon" title="">
